force-app/main/default/objects/Domestic_Dealsheet__mdt/Domestic_Dealsheet__mdt.object-meta.xml
<CustomObject>
    <label>Domestic Dealsheet</label>
    <pluralLabel>Domestic Dealsheets</pluralLabel>
</CustomObject>