force-app/main/default/objects/Domestic_Dealsheet__mdt/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <defaultValue>&apos;/apex/APXTConga4__Conga_Composer?serverUrl=https://qantas.lightning.force.com/services/Soap/c/48.0/00D8s00000IDoz7/apex/APXTConga4__Conga_Composer?serverUrl=API.Partner_Server_URL_370&amp;id=&apos;</defaultValue>
    <label>Domain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>