force-app/main/default/objects/Domestic_Dealsheet__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <defaultValue>&apos;&amp;queryid=[DSDLDOM]a0W2v000017vhNsEAI,[DSRINT]a0W2v000017vhO1EAI,[DSRUNU]a0W2v000017vhO3EAI,[DSDLINT]a0W2v000017vhO2EAI,[DSDENU]a0W2v000017vhNrEAI,[ExBaDOM]a0W2v000018Fi92EAC,[PenDOM]a0W2v000018Fi98EAC,[AdvResDOM]a0W2v000018Fi91EAC,[DSACD]a0W2v000017vhO4EAI,[DSACI]a0W2v000017vhNxEAI,[DSJQ]a0W2v000017vhNtEAI,[DSRDOM]a0W2v000017vhNuEAI,[DSTMCI]a0W2v000017vhNvEAI,[InFaDOM]a0W2v000018Fi9AEAS,[RoDeDOM]a0W2v000018Fi9CEAS,[FiFaDOM]a0W2v000018Fi99EAC,[BlFaDOM]a0W2v000018Fi95EAC,[BlFaFlex]a0W2v000018Fi8xEAC,[BlFaSFlex]a0W2v000018Fi8wEAC,[SPDOM]a0W2v000017vhOlEAI,[SPINT]a0W2v000017vhOkEAI&amp;QVar0ID=a0W2v000017vhNrEAI?pv0=	&apos;</defaultValue>
    <label>URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>