force-app/main/default/objects/Domestic_Dealsheet__mdt/fields/Word__c.field-meta.xml
<CustomField>
    <fullName>Word__c</fullName>
    <defaultValue>&apos;&amp;TemplateId=a0X2v00000OEKgfEAH&amp;DS7=1&amp;DS7Preview=1&amp;DefaultPDF=0&amp;FP0=1;&apos;</defaultValue>
    <label>Word</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>